# Grotto

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md
include/components/: cameraComponent.h  physicsComponent.h  renderComponent.h  transformComponent.h
include/config/: config.h
include/glad/: glad.h
include/logging/: logging.h
include/resources/: resourceManager.h
include/systems/: cameraSystem.h  motionSystem.h  renderSystem.h
include/view/: shader.h
res/shaders/: vertex.txt
src/: config.cpp  glad.c  linear_algebra.cpp  linear_algebra.h  main.cpp  material.cpp  material.h  triangle_mesh.cpp  triangle_mesh.h
src/controller/: app.cpp  app.h
src/resources/: resourceManager.cpp
src/shaders/: fragment.txt  vertex.txt
src/systems/: cameraSystem.cpp  motionSystem.cpp  renderSystem.cpp
src/view/: shader.cpp
